minijinja/tests/snapshots/test_parser__parser@max-recursion.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ [[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[42]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]] }}"
input_file: minijinja/tests/parser-inputs/max-recursion.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "template exceeds maximum recusion limits",
        name: "max-recursion.txt",
        line: 1,
    },
)
