minijinja/tests/snapshots/test_parser__parser@set.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{% set variable = value %}\n{% set (a, b) = (1, 2) %}\n{% set variable2 %}\n    this is the {{ body }}\n{% endset %}\n{% set variable3 | upper %}\n    this is the {{ body }} with filter\n{% endset %}"
input_file: minijinja/tests/parser-inputs/set.txt
---
Ok(
    Template {
        children: [
            Set {
                target: Var {
                    id: "variable",
                } @ 1:7-1:15,
                expr: Var {
                    id: "value",
                } @ 1:18-1:23,
            } @ 1:3-1:23,
            EmitRaw {
                raw: "\n",
            } @ 1:26-2:0,
            Set {
                target: List {
                    items: [
                        Var {
                            id: "a",
                        } @ 2:8-2:9,
                        Var {
                            id: "b",
                        } @ 2:11-2:12,
                    ],
                } @ 2:8-2:12,
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 2:17-2:18,
                        Const {
                            value: 2,
                        } @ 2:20-2:21,
                    ],
                } @ 2:16-2:22,
            } @ 2:3-2:22,
            EmitRaw {
                raw: "\n",
            } @ 2:25-3:0,
            SetBlock {
                target: Var {
                    id: "variable2",
                } @ 3:7-3:16,
                filter: None,
                body: [
                    EmitRaw {
                        raw: "\n    this is the ",
                    } @ 3:19-4:16,
                    EmitExpr {
                        expr: Var {
                            id: "body",
                        } @ 4:19-4:23,
                    } @ 4:16-4:23,
                    EmitRaw {
                        raw: "\n",
                    } @ 4:26-5:0,
                ],
            } @ 3:3-5:9,
            EmitRaw {
                raw: "\n",
            } @ 5:12-6:0,
            SetBlock {
                target: Var {
                    id: "variable3",
                } @ 6:7-6:16,
                filter: Some(
                    Filter {
                        name: "upper",
                        expr: None,
                        args: [],
                    } @ 6:19-6:24,
                ),
                body: [
                    EmitRaw {
                        raw: "\n    this is the ",
                    } @ 6:27-7:16,
                    EmitExpr {
                        expr: Var {
                            id: "body",
                        } @ 7:19-7:23,
                    } @ 7:16-7:23,
                    EmitRaw {
                        raw: " with filter\n",
                    } @ 7:26-8:0,
                ],
            } @ 6:3-8:9,
        ],
    } @ 0:0-8:12,
)
