minijinja/tests/snapshots/test_parser__parser@string-implicit-concat.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ \"foo\" }}\n{{ \"foo\" \"bar\" }}\n{{ \"foo\" \"bar\" \"baz\" }}\n{{ \"foo\" \"\\u2603bar\" \"baz\" }}\n{{ \"foo\\u2603bar\" \"baz\" }}\n{{ \"foo\\nbar\" \"bar\\nbaz\" }}"
input_file: minijinja/tests/parser-inputs/string-implicit-concat.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Const {
                    value: 'foo',
                } @ 1:3-1:8,
            } @ 1:0-1:8,
            EmitRaw {
                raw: "\n",
            } @ 1:11-2:0,
            EmitExpr {
                expr: Const {
                    value: 'foobar',
                } @ 2:3-2:14,
            } @ 2:0-2:14,
            EmitRaw {
                raw: "\n",
            } @ 2:17-3:0,
            EmitExpr {
                expr: Const {
                    value: 'foobarbaz',
                } @ 3:3-3:20,
            } @ 3:0-3:20,
            EmitRaw {
                raw: "\n",
            } @ 3:23-4:0,
            EmitExpr {
                expr: Const {
                    value: 'foo☃barbaz',
                } @ 4:3-4:26,
            } @ 4:0-4:26,
            EmitRaw {
                raw: "\n",
            } @ 4:29-5:0,
            EmitExpr {
                expr: Const {
                    value: 'foo☃barbaz',
                } @ 5:3-5:23,
            } @ 5:0-5:23,
            EmitRaw {
                raw: "\n",
            } @ 5:26-6:0,
            EmitExpr {
                expr: Const {
                    value: 'foo\nbarbar\nbaz',
                } @ 6:3-6:24,
            } @ 6:0-6:24,
        ],
    } @ 0:0-6:27,
)
