minijinja/tests/snapshots/test_parser__parser@tuples.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ [1, 2, 3] }}\n{{ (1, 2, 3) }}\n{{ (1,) }}\n{{ () }}"
input_file: minijinja/tests/parser-inputs/tuples.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: List {
                    items: [
                        Const {
                            value: 1,
                        } @ 1:4-1:5,
                        Const {
                            value: 2,
                        } @ 1:7-1:8,
                        Const {
                            value: 3,
                        } @ 1:10-1:11,
                    ],
                } @ 1:3-1:12,
            } @ 1:0-1:12,
            EmitRaw {
                raw: "\n",
            } @ 1:15-2:0,
            EmitExpr {
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 2:4-2:5,
                        Const {
                            value: 2,
                        } @ 2:7-2:8,
                        Const {
                            value: 3,
                        } @ 2:10-2:11,
                    ],
                } @ 2:3-2:12,
            } @ 2:0-2:12,
            EmitRaw {
                raw: "\n",
            } @ 2:15-3:0,
            EmitExpr {
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 3:4-3:5,
                    ],
                } @ 3:3-3:7,
            } @ 3:0-3:7,
            EmitRaw {
                raw: "\n",
            } @ 3:10-4:0,
            EmitExpr {
                expr: Tuple {
                    items: [],
                } @ 4:3-4:5,
            } @ 4:0-4:5,
        ],
    } @ 0:0-4:8,
)
