minijinja/tests/snapshots/test_parser__parser@with.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/with.txt
---
Ok(
    Template {
        children: [
            WithBlock {
                assignments: [
                    (
                        Var {
                            id: "a",
                        } @ 1:8-1:9,
                        Var {
                            id: "foo",
                        } @ 1:10-1:13,
                    ),
                    (
                        Var {
                            id: "b",
                        } @ 1:15-1:16,
                        Var {
                            id: "bar",
                        } @ 1:17-1:20,
                    ),
                ],
                body: [
                    EmitRaw {
                        raw: "\n  ",
                    } @ 1:23-2:2,
                    EmitExpr {
                        expr: Var {
                            id: "a",
                        } @ 2:5-2:6,
                    } @ 2:2-2:6,
                    EmitRaw {
                        raw: "|",
                    } @ 2:9-2:10,
                    EmitExpr {
                        expr: Var {
                            id: "b",
                        } @ 2:13-2:14,
                    } @ 2:10-2:14,
                    EmitRaw {
                        raw: "\n",
                    } @ 2:17-3:0,
                ],
            } @ 1:3-3:10,
            EmitRaw {
                raw: "\n\n",
            } @ 3:13-5:0,
            WithBlock {
                assignments: [
                    (
                        Var {
                            id: "a",
                        } @ 5:8-5:9,
                        Var {
                            id: "foo",
                        } @ 5:10-5:13,
                    ),
                ],
                body: [
                    EmitRaw {
                        raw: "\n  ",
                    } @ 5:16-6:2,
                    EmitExpr {
                        expr: Var {
                            id: "a",
                        } @ 6:5-6:6,
                    } @ 6:2-6:6,
                    EmitRaw {
                        raw: "\n",
                    } @ 6:9-7:0,
                ],
            } @ 5:3-7:10,
        ],
    } @ 0:0-7:13,
)
